<resources>
    <string name="app_name">Survey App</string>
    <string name="account_settings">Account Settings</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove User</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Full Name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered? Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back">Go back</string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to send you password reset instructions.</string>
    <string name="prompt_password">Password Hint</string>
    <string name="ok">OK</string>
    <string name="rishideep">_rishideep_</string>
    <string name="submit">Submit</string>



    <!-- -&#45;&#45;&#45;&#45;-->


    <string name="interview_schedule_for_the_field_survey">INTERVIEW SCHEDULE FOR THE FIELD SURVEY</string>
    <string name="i_socio_economic_status">I. SOCIO ECONOMIC STATUS</string>

    <!--QUESTION 01-->
    <string name="question1">01. Name of the student</string>

    <!--QUESTION 02-->
    <string name="question2">02. Age of the student</string>

    <!--QUESTION 03-->
    <string name="question3">03. Gender</string>
    <string name="question3_rd1">Male</string>
    <string name="question3_rd2">Female</string>
    <string name="question3_rd3">Transgender</string>

    <!--QUESTION 04-->
    <string name="question4">04. Caste</string>
    <string name="question4_rd1">OC</string>
    <string name="question4_rd2">BC</string>
    <string name="question4_rd3">MBC</string>
    <string name="question4_rd4">SC</string>
    <string name="question4_rd5">ST</string>

    <!--QUESTION 05-->
    <string name="question5">05. Current education / Education received</string>

    <!--QUESTION 06-->
    <string name="question6">06. Place of the school</string>

    <!--QUESTION 07-->
    <string name="question7">07. No of other school going children in the Family</string>
    <string name="child_1">Child 1</string>
    <string name="child_2">Child 2</string>
    <string name="child_3">Child 3</string>
    <string name="others">Others</string>
    <string name="age">Age</string>

    <!--QUESTION 08-->
    <string name="question8">08. Are there any school dropout in the family? (children)</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="if_yes">If yes,</string>
    <string name="male">Male (nos.)</string>
    <string name="female">Female (nos.)</string>

    <!--QUESTION 09-->
    <string name="question9">09. Educational status of the parents</string>
    <string name="motherName">Mother Name</string>
    <string name="fatherName">Father Name</string>
    <string name="gaurdianName">Guardian Name</string>
    <string name="edStatus">Educational Status</string>

    <!--QUESTION 10-->
    <string name="question10">10. Occupation and income of the parents and family members</string>
    <string name="question10note">(If employment is daily wage, ask for no. of days of work per week and then calculate monthly income)</string>
    <string name="father">FATHER :</string>
    <string name="mother">MOTHER :</string>
    <string name="person1">PERSON - 1 :</string>
    <string name="person2">PERSON - 2 :</string>
    <string name="person3">PERSON - 3 :</string>
    <string name="nature_of_employment">Nature of Employment</string>
    <string name="salary_mode">Salary mode</string>
    <string name="monthly_income_rs">Monthly Income (Rs.)</string>
    <string name="govt">Govt.</string>
    <string name="private_">Private</string>
    <string name="self_employment">Self-employment</string>
    <string name="daily_wage_labour">Daily wage labour</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>

    <!--QUESTION 11-->
    <string name="question11">11. Ownership of the house</string>
    <string name="question11_rd1">Own</string>
    <string name="question11_rd2">Rented</string>
    <string name="question11_rd3">Leased</string>

    <!--QUESTION 12-->
    <string name="question12">12. Type of house?</string>
    <string name="question12_rd1">Hut</string>
    <string name="question12_rd2">Tiled</string>
    <string name="question12_rd3">Concrete</string>

    <string name="ii_utilization_of_the_student_welfare_schemes">II. UTILIZATION OF THE STUDENT WELFARE SCHEMES</string>

    <!--QUESTION 13-->
    <string name="question13">13. Which are the following schemes you avail?</string>
    <string name="welfare_schemes">WELFARE SCHEMES :</string>
    <string name="not_applicable">Not Applicable</string>
    <string name="if_no_why">If no, why?</string>
    <string name="for_all_students">(For all students)</string>
    <string name="students_to_travel_by_govt_buses_for_all_students">(Students to travel by govt. buses) (For all students)</string>
    <string name="only_for_1st_and_2nd_standard_students">(Only for 1st and 2nd standard students)</string>
    <string name="only_for_3rd_to_5th_standard_students">(Only for 3rd to 5th standard students)</string>
    <string name="only_for_adolescent_girls">(Only for adolescent girls)</string>
    <string name="only_for_11th_and_12th_standard_students">(Only for 11th and 12th standard students)</string>
    <string name="only_for_12th_standard_students">(Only for 12th standard students)</string>
    <string name="preventing_dropouts_of_sc_st_girl_students_the_9th_standard_unmarried_sc_st_girls_of_age_less_than_16_years_are_provided_with_the_fixed_deposit_certificate_for_rs_3000">(Preventing dropouts of SC/ST girl students, the 9th standard unmarried SC/ST girls of age less than 16 years are provided with the fixed deposit certificate for Rs.3000)</string>
    <string name="only_for_whose_bread_winning_parent_dies_in_an_accident_or_is_rendered_permanently_incapacitated_or_incapacitate">(Only for whose bread winning parent dies in an accident or is rendered permanently incapacitated or incapacitate)</string>

    <string name="question13_01">01. Distribution of Textbooks</string>
    <string name="question13_02">02. Free  notebooks</string>
    <string name="question13_03">03. Free uniforms - 4 sets</string>
    <string name="question13_04">04. Geometry box</string>
    <string name="question13_05">05. Atlas</string>
    <string name="question13_06">06. Chappals</string>
    <string name="question13_07">07. Free bus pass</string>
    <string name="question13_08">08. Dr. MGR nutritious meal scheme</string>
    <string name="question13_09">09. Crayons</string>
    <string name="question13_10">10. Color pencils</string>
    <string name="question13_11">11. Weekly Iron and Folic Acid Supplementation (WIFS) programme</string>
    <string name="question13_12">12. Napkins</string>
    <string name="question13_13">13. Distribution of free bicycles</string>
    <string name="question13_14">14. Laptop</string>
    <string name="question13_15">15. Girls’ Incentive Scheme</string>
    <string name="question13_16">16. Financial assistance for students benefit of parental support</string>

    <!--QUESTION 14-->
    <string name="question14">14. Which is the level of utilization of the following schemes by you?</string>
    <string name="not_utilised">Not Utilised</string>
    <string name="partially_utilised">Partially Utilised</string>
    <string name="fully_utilised">Fully Utilised</string>

    <!--QUESTION 15-->
    <string name="question15">15. ORDER or RANK the following schemes based on the utility of the scheme to you.</string>
    <string name="question15note">(Give 1 to most useful scheme and continue)</string>
    <string name="order_rank_1_to_16">Order / Rank [1 to 16]</string>

    <!--QUESTION 16-->
    <string name="question16">16. Among the availed schemes, which schemes were very relevant / useful?</string>

    <!--QUESTION 17-->
    <string name="question17">17. Among these, which schemes were more supportive to continue your schooling?</string>

    <!--QUESTION 18-->
    <string name="question18">18. Among the availed schemes, which schemes were completely utilized by you?</string>

    <!--QUESTION 19-->
    <string name="question19">19. Have you not completely utilized any of the schemes?</string>
    <string name="why">Why?</string>
    <string name="question20">20. Are there any scheme which is benefiting the family members other than you?</string>
    <string name="mention_it">Mention it</string>
</resources>
