<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16sp"
    android:layout_marginRight="16sp"
    android:layout_marginTop="16sp"
    android:background="@color/gray_BG"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_question4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="16sp"
        android:text="@string/question4"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/rg_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16sp"
        android:layout_marginEnd="16sp"
        android:layout_marginStart="16sp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_4_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16sp"
            android:text="@string/question4_rd1" />

        <RadioButton
            android:id="@+id/rb_4_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16sp"
            android:text="@string/question4_rd2" />

        <RadioButton
            android:id="@+id/rb_4_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16sp"
            android:text="@string/question4_rd3" />

        <RadioButton
            android:id="@+id/rb_4_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16sp"
            android:text="@string/question4_rd4" />

        <RadioButton
            android:id="@+id/rb_4_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16sp"
            android:text="@string/question4_rd5" />

    </RadioGroup>

</LinearLayout>