<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16sp"
    android:layout_marginRight="16sp"
    android:layout_marginTop="16sp"
    android:background="@color/gray_BG"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_question20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="16sp"
        android:text="@string/question20"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/rg_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16sp"
        android:layout_marginEnd="16sp"
        android:layout_marginStart="16sp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_20_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16sp"
            android:text="@string/yes" />

        <RadioButton
            android:id="@+id/rb_20_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16sp"
            android:text="@string/no" />

    </RadioGroup>

    <TextView
        android:id="@+id/tv_question20_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="8sp"
        android:paddingLeft="16sp"
        android:paddingRight="16sp"
        android:text="@string/if_yes"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_answer20_mi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16sp"
        android:layout_marginEnd="8sp"
        android:layout_marginStart="16sp"
        android:hint="@string/mention_it"
        android:inputType="text"
        android:textColor="@android:color/black"
        tools:ignore="LabelFor" />

</LinearLayout>