<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16sp"
    android:layout_marginRight="16sp"
    android:layout_marginTop="16sp"
    android:background="@color/gray_BG"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_question10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="16sp"
        android:text="@string/question10"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <!--FATHER-->

    <TextView
        android:id="@+id/tv_question10_father"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="8sp"
        android:paddingLeft="16sp"
        android:paddingRight="16sp"
        android:text="@string/father"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_question10_father_noe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="8sp"
        android:paddingLeft="16sp"
        android:paddingRight="16sp"
        android:text="@string/nature_of_employment"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/rg_10_father_noe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16sp"
        android:layout_marginEnd="16sp"
        android:layout_marginStart="16sp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb_10_father_noe_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16sp"
            android:text="@string/govt" />

        <RadioButton
            android:id="@+id/rb_10_father_noe_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16sp"
            android:text="@string/private_" />

        <RadioButton
            android:id="@+id/rb_10_father_noe_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16sp"
            android:text="@string/self_employment" />

        <RadioButton
            android:id="@+id/rb_10_father_noe_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16sp"
            android:text="@string/daily_wage_labour" />

    </RadioGroup>

    <TextView
        android:id="@+id/tv_question10_father_sm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="8sp"
        android:paddingLeft="16sp"
        android:paddingRight="16sp"
        android:text="@string/salary_mode"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/rg_10_father_sm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16sp"
        android:layout_marginEnd="16sp"
        android:layout_marginStart="16sp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_10_father_sm_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16sp"
            android:text="@string/daily" />

        <RadioButton
            android:id="@+id/rb_10_father_sm_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16sp"
            android:text="@string/weekly" />

        <RadioButton
            android:id="@+id/rb_10_father_sm_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16sp"
            android:text="@string/monthly" />

    </RadioGroup>

    <EditText
        android:id="@+id/et_answer10_father_mi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16sp"
        android:layout_marginEnd="16sp"
        android:layout_marginStart="16sp"
        android:hint="@string/monthly_income_rs"
        android:inputType="number"
        android:textColor="@android:color/black"
        tools:ignore="LabelFor" />

    <!--MOTHER-->

    <TextView
        android:id="@+id/tv_question10_mother"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="8sp"
        android:paddingLeft="16sp"
        android:paddingRight="16sp"
        android:text="@string/mother"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_question10_mother_noe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="8sp"
        android:paddingLeft="16sp"
        android:paddingRight="16sp"
        android:text="@string/nature_of_employment"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/rg_10_mother_noe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16sp"
        android:layout_marginEnd="16sp"
        android:layout_marginStart="16sp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb_10_mother_noe_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16sp"
            android:text="@string/govt" />

        <RadioButton
            android:id="@+id/rb_10_mother_noe_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16sp"
            android:text="@string/private_" />

        <RadioButton
            android:id="@+id/rb_10_mother_noe_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16sp"
            android:text="@string/self_employment" />

        <RadioButton
            android:id="@+id/rb_10_mother_noe_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16sp"
            android:text="@string/daily_wage_labour" />

    </RadioGroup>

    <TextView
        android:id="@+id/tv_question10_mother_sm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="8sp"
        android:paddingLeft="16sp"
        android:paddingRight="16sp"
        android:text="@string/salary_mode"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/rg_10_mother_sm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16sp"
        android:layout_marginEnd="16sp"
        android:layout_marginStart="16sp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_10_mother_sm_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16sp"
            android:text="@string/daily" />

        <RadioButton
            android:id="@+id/rb_10_mother_sm_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16sp"
            android:text="@string/weekly" />

        <RadioButton
            android:id="@+id/rb_10_mother_sm_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16sp"
            android:text="@string/monthly" />

    </RadioGroup>

    <EditText
        android:id="@+id/et_answer10_mother_mi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16sp"
        android:layout_marginEnd="16sp"
        android:layout_marginStart="16sp"
        android:hint="@string/monthly_income_rs"
        android:inputType="number"
        android:textColor="@android:color/black"
        tools:ignore="LabelFor" />
</LinearLayout>