<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16sp"
    android:layout_marginRight="16sp"
    android:layout_marginTop="16sp"
    android:background="@color/gray_BG"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_question9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="16sp"
        android:text="@string/question9"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_answer9_motherName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:layout_marginEnd="8sp"
            android:layout_marginStart="16sp"
            android:layout_weight=".5"
            android:hint="@string/motherName"
            android:inputType="text"
            android:textColor="@android:color/black"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/et_answer9_edStatusMN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:layout_marginEnd="16sp"
            android:layout_marginStart="8sp"
            android:layout_weight=".5"
            android:hint="@string/edStatus"
            android:inputType="text"
            android:textColor="@android:color/black"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_answer9_fatherName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:layout_marginEnd="8sp"
            android:layout_marginStart="16sp"
            android:layout_weight=".5"
            android:hint="@string/fatherName"
            android:inputType="text"
            android:textColor="@android:color/black"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/et_answer9_edStatusFN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:layout_marginEnd="16sp"
            android:layout_marginStart="8sp"
            android:layout_weight=".5"
            android:hint="@string/edStatus"
            android:inputType="text"
            android:textColor="@android:color/black"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_answer9_gaurdianName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:layout_marginEnd="8sp"
            android:layout_marginStart="16sp"
            android:layout_weight=".5"
            android:hint="@string/gaurdianName"
            android:inputType="text"
            android:textColor="@android:color/black"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/et_answer9_edStatusGN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:layout_marginEnd="16sp"
            android:layout_marginStart="8sp"
            android:layout_weight=".5"
            android:hint="@string/edStatus"
            android:inputType="text"
            android:textColor="@android:color/black"
            tools:ignore="LabelFor" />

    </LinearLayout>

</LinearLayout>